--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body>
         <header>
             <div class="carousel">
-                <img src="https://picsum.photos/id/870/200/300?grayscale&blur=2" alt="random image">
-                <img class="layer" src="https://picsum.photos/id/870/200/300?&blur=2" alt="random image">
+                <img class="up-layer" src="https://picsum.photos/id/20/500?grayscale&blur=2" alt="random image">
+                <img class="btm-layer" src="https://picsum.photos/id/20/500" alt="random image">
             </div>
             <h1 class="header__title">TULINAYO Emmanuel</h1>
             <h2>Développeur Web frontend</h2>
@@ -17,8 +17,8 @@
         </header>
         <main>
             <div class="carousel">
-                <img src="https://picsum.photos/id/870/200/300?grayscale&blur=2" alt="random image">
-                <img class="layer" src="https://picsum.photos/id/870/200/300?&blur=2" alt="illustration">
+                <img class="up-layer" src="https://picsum.photos/id/2/500?grayscale&blur=2" alt="random image">
+                <img class="btm-layer" src="https://picsum.photos/id/2/500" alt="illustration">
             </div>
 
             <section>
@@ -69,8 +69,8 @@
             </section>
 
             <div class="carousel">
-                <img src="https://picsum.photos/id/870/200/300?grayscale&blur=2" alt="random image">
-                <img class="layer" src="https://picsum.photos/id/870/200/300?&blur=2" alt="illustration">
+                <img class="up-layer" src="https://picsum.photos/id/6/500?grayscale&blur=2" alt="random image">
+                <img class="btm-layer" src="https://picsum.photos/id/6/500" alt="illustration">
             </div>
         </main>
         <footer>
