--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img class="up-layer" src="https://picsum.photos/id/20/500?grayscale&blur=2" alt="random image">
                 <img class="btm-layer" src="https://picsum.photos/id/20/500" alt="random image">
                 <div class="btn">
-                    <h2 class="first__title">Hello</h2>
+                    <h2 class="first__title">Welcome in</h2>
                 </div>
             </div>
         </header>
@@ -149,7 +149,7 @@
                 <img class="up-layer" src="https://picsum.photos/id/6/500?grayscale&blur=2" alt="random image">
                 <img class="btm-layer" src="https://picsum.photos/id/6/500" alt="illustration">
                 <div class="btn">
-                    <p>Thank you</p>
+                    <p>Thanks for your visit</p>
                 </div>
             </div>
         </main>
