--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="./css/normalize.css" />
         <link rel="stylesheet" href="./css/index.css" />
         <script defer src="./js/observer.js"></script>
+        <script defer src="./js/scroll.js"></script>
         <title>Tulinayo Emmanuel</title>
     </head>
 
@@ -41,7 +42,7 @@
                 <p>Awesome Projects.</p>
                 <div class="container container--experience">
                     <div class="block block--experience">
-                        <h3>React web Applications</h3>
+                        <h3>React web Applications.</h3>
                         <div class="text text--experience">
                             <p>Configure navigation with "react-router-dom".</p>
                             <p>Create user interface with functionnal components.</p>
@@ -49,7 +50,7 @@
                         </div>
                     </div>
                     <div class="block block--experience">
-                        <h3>Secure API</h3>
+                        <h3>Secure API.</h3>
                         <div class="text text--experience">
                             <p>Implement CRUD operations.</p>
                             <p>Add JWT authentication.</p>
@@ -58,7 +59,7 @@
                         </div>
                     </div>
                     <div class="block block--experience">
-                        <h3>E-commerce Websites</h3>
+                        <h3>E-commerce Websites.</h3>
                         <div class="text text--experience">
                             <p>Manage asynchronous API requests.</p>
                             <p>Manage purchases.</p>
@@ -70,7 +71,7 @@
             </aside>
 
             <aside class="skills">
-                <p>My favourite tools</p>
+                <p>My favourite tools.</p>
                 <div class="container container--skills">
                     <h2>Fontend</h2>
                     <div class="block block--skills">
@@ -119,7 +120,7 @@
             </aside>
 
             <aside class="skills">
-                <p>Cool tech that i use.</p>
+                <p>Other cool tech.</p>
                 <div class="container container--skills">
                     <h2>Backend</h2>
                     <div class="block block--skills">
@@ -146,7 +147,7 @@
             </aside>
 
             <aside class="skills">
-                <p>Other interests.</p>
+                <p>Interests.</p>
                 <div class="container container--skills">
                     <div class="block block--skills">
                         <div class="items">
@@ -196,7 +197,7 @@
             </aside>
             
             <aside class="education">
-                <p>Education</p>
+                <p>Education.</p>
                 <div class="container container--education">
                     <div class="block block--education">
                         <h3>Simplon - Lille</h3>
@@ -220,14 +221,14 @@
                 <img class="up-layer" src="https://picsum.photos/id/6/500?grayscale&blur=2" alt="random image">
                 <img class="btm-layer" src="https://picsum.photos/id/6/500" alt="illustration">
                 <div class="btn">
-                    <p>Thanks for your visit</p>
+                    <p>Thanks for your visit.</p>
                 </div>
             </div>
         </main>
 
         <footer>
             <div class="container container--footer">
-                <p>Let's stay in touch!</p>
+                <p>Let's stay in touch.</p>
                 <div class="block block--footer">
                     <div class="text text--footer items">
                         <a href="mailto:tulinayoemmanuel@gmail.com">
