--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 
     <head>
         <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta description="Emmanuel Tulinayo, frontend Web developper with experience in backend."/>
         <link rel="stylesheet" href="./css/normalize.css" />
         <link rel="stylesheet" href="./css/index.css" />
         <script defer src="./js/observer.js"></script>
         <script defer src="./js/scroll.js"></script>
-        <title> Emmanuel Tulinayo</title>
+        <title> Emmanuel Tulinayo </title>
     </head>
 
     <body>
         <header>
             <div class="bumper">
-                <img class="up-layer" src="https://picsum.photos/id/20/500?grayscale&blur=2" alt="random image">
-                <img class="btm-layer" src="https://picsum.photos/id/20/500" alt="random image">
+                <img class="up-layer" src="https://picsum.photos/id/20/500?grayscale&blur=2" alt="random image top">
+                <img class="btm-layer" src="https://picsum.photos/id/20/500" alt="random blurred image top">
                 <div class="btn">
                     <p class="first__title">Hello</p>
                 </div>
@@ -86,7 +88,8 @@
                         <h3>React web Applications.</h3>
                         <div class="text text--experience">
                             <p>Configure navigation with "react-router-dom".</p>
-                            <p>Create user interface with functionnal components.</p>
+                            <p>Create user interface. </p>
+                            <p>Use functionnal components.</p>
                             <p>Manage application states.</p>
                         </div>
                     </div>
@@ -259,8 +262,8 @@
                 </div>
             </aside>
             <div class="bumper">
-                <img class="up-layer" src="https://picsum.photos/id/6/500?grayscale&blur=2" alt="random image">
-                <img class="btm-layer" src="https://picsum.photos/id/6/500" alt="illustration">
+                <img class="up-layer" src="https://picsum.photos/id/6/500?grayscale&blur=2" alt="random image bottom">
+                <img class="btm-layer" src="https://picsum.photos/id/6/500" alt="random blurred image bottom ">
                 <div class="btn">
                     <p>Thanks for your visit.</p>
                 </div>
