--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <aside class="skills">
                 <p>My favourite tools.</p>
                 <div class="container container--skills">
-                    <h2>Fontend</h2>
+                    <h2>Frontend</h2>
                     <div class="block block--skills">
                         <div class="items">
                             <h4>React</h4>
