--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <meta description="Emmanuel Tulinayo, frontend Web developper with experience in backend."/>
+        <meta description="Emmanuel Tulinayo, frontend Web developper."/>
         <link rel="stylesheet" href="./css/normalize.css" />
         <link rel="stylesheet" href="./css/index.css" />
+        <script defer src="./js/wiki.js"></script>
         <script defer src="./js/observer.js"></script>
         <script defer src="./js/scroll.js"></script>
         <title> Emmanuel Tulinayo </title>
@@ -14,11 +15,22 @@
 
     <body>
         <header>
+            <div class="wikiquote">
+                <details>
+                    <summary>
+                        <p class="text">Did you know that...</p>
+                    </summary>
+                    <div class="text" id="wikiquote"></div>
+                </details>
+            </div>
+
             <div class="bumper">
-                <img class="up-layer" src="https://picsum.photos/id/20/500?grayscale&blur=2" alt="random image top">
-                <img class="btm-layer" src="https://picsum.photos/id/20/500" alt="random blurred image top">
-                <div class="btn">
-                    <p class="first__title">Hello</p>
+                <img class="btm-layer" 
+                    src="https://picsum.photos/id/20/500" 
+                    alt="random blurred image top"
+                     loading="lazy">
+                <div class="btn scroll">
+                    <p class="first__title">Contact me to learn more !</p>
                 </div>
             </div>
         </header>
@@ -26,7 +38,11 @@
         <main>
             <aside>
                 <div class="text text--presentation">
-                    <h2>Emmanuel Tulinayo</h2>
+                    <div class="block block--presentation">
+                        <h1>Web Developper</h1>
+                        <h2>Emmanuel Tulinayo</h2>
+                        <p>Lille, France.</p>
+                    </div>
                 </div>
                 <div class="block block--footer">
                     <div class="text text--footer items">
@@ -66,50 +82,6 @@
                                 </svg>
                             </div>
                         </a>
-                    </div>
-                </div>
-            </aside>
-            
-            <aside class="presentation">
-                <div class="container container--presentation">
-                    <div class="block block--presentation">
-                        <h1>Web Developper</h1>
-                        <p>Lille, France.</p>
-                    </div>
-
-                </div>
-            </aside>
-
-
-            <aside class="experience">
-                <p>Awesome Projects.</p>
-                <div class="container container--experience">
-                    <div class="block block--experience">
-                        <h3>React web Applications.</h3>
-                        <div class="text text--experience">
-                            <p>Configure navigation with "react-router-dom".</p>
-                            <p>Create user interface. </p>
-                            <p>Use functionnal components.</p>
-                            <p>Manage application states.</p>
-                        </div>
-                    </div>
-                    <div class="block block--experience">
-                        <h3>Secure API.</h3>
-                        <div class="text text--experience">
-                            <p>Implement CRUD operations.</p>
-                            <p>Add JWT authentication.</p>
-                            <p>Encrypt users passwords.</p>
-                            <p>Manage file uploads and file deletions.</p>
-                        </div>
-                    </div>
-                    <div class="block block--experience">
-                        <h3>E-commerce Websites.</h3>
-                        <div class="text text--experience">
-                            <p>Manage asynchronous API requests.</p>
-                            <p>Manage purchases.</p>
-                            <p>Use LocalStorage.</p>
-                            <p>Validate users data.</p>
-                        </div>
                     </div>
                 </div>
             </aside>
@@ -163,47 +135,42 @@
                 </div>
             </aside>
 
-            <aside class="skills">
-                <p>Other cool tech.</p>
-                <div class="container container--skills">
-                    <h2>Backend</h2>
-                    <div class="block block--skills">
-                        <div class="items">
-                            <h4>NodeJS / MongoDB</h4>
-                            <div class="icons">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M224 508c-6.7 0-13.5-1.8-19.4-5.2l-61.7-36.5c-9.2-5.2-4.7-7-1.7-8 12.3-4.3 14.8-5.2 27.9-12.7 1.4-.8 3.2-.5 4.6.4l47.4 28.1c1.7 1 4.1 1 5.7 0l184.7-106.6c1.7-1 2.8-3 2.8-5V149.3c0-2.1-1.1-4-2.9-5.1L226.8 37.7c-1.7-1-4-1-5.7 0L36.6 144.3c-1.8 1-2.9 3-2.9 5.1v213.1c0 2 1.1 4 2.9 4.9l50.6 29.2c27.5 13.7 44.3-2.4 44.3-18.7V167.5c0-3 2.4-5.3 5.4-5.3h23.4c2.9 0 5.4 2.3 5.4 5.3V378c0 36.6-20 57.6-54.7 57.6-10.7 0-19.1 0-42.5-11.6l-48.4-27.9C8.1 389.2.7 376.3.7 362.4V149.3c0-13.8 7.4-26.8 19.4-33.7L204.6 9c11.7-6.6 27.2-6.6 38.8 0l184.7 106.7c12 6.9 19.4 19.8 19.4 33.7v213.1c0 13.8-7.4 26.7-19.4 33.7L243.4 502.8c-5.9 3.4-12.6 5.2-19.4 5.2zm149.1-210.1c0-39.9-27-50.5-83.7-58-57.4-7.6-63.2-11.5-63.2-24.9 0-11.1 4.9-25.9 47.4-25.9 37.9 0 51.9 8.2 57.7 33.8.5 2.4 2.7 4.2 5.2 4.2h24c1.5 0 2.9-.6 3.9-1.7s1.5-2.6 1.4-4.1c-3.7-44.1-33-64.6-92.2-64.6-52.7 0-84.1 22.2-84.1 59.5 0 40.4 31.3 51.6 81.8 56.6 60.5 5.9 65.2 14.8 65.2 26.7 0 20.6-16.6 29.4-55.5 29.4-48.9 0-59.6-12.3-63.2-36.6-.4-2.6-2.6-4.5-5.3-4.5h-23.9c-3 0-5.3 2.4-5.3 5.3 0 31.1 16.9 68.2 97.8 68.2 58.4-.1 92-23.2 92-63.4z"/></svg>
-                            </div>
+            <aside class="experience">
+                <p>Awesome Projects.</p>
+                <div class="container container--experience">
+                    <details class="block block--experience" open>
+                        <summary> <h3>React</h3> </summary>
+                        <div class="text text--experience">
+                            <p>Configure navigation with "react-router-dom".</p>
+                            <p>Create user interface. </p>
+                            <p>Use functionnal components.</p>
+                            <p>Manage application states.</p>
                         </div>
-                        <div class="items">
-                            <h4>C# / PostgreSQL</h4>
-                            <div class="icons">
-                                <p><i>C#</i></p>
-                            </div>
+                    </details>
+                    <details class="block block--experience" open>
+                        <summary> <h3>Secure API.</h3> </summary>
+                        <div class="text text--experience">
+                            <p>Implement CRUD operations.</p>
+                            <p>Add JWT authentication.</p>
+                            <p>Encrypt users passwords.</p>
+                            <p>Manage file uploads and file deletions.</p>
                         </div>
-                        <div class="items">
-                            <h4>PHP / MySQL</h4>
-                            <div class="icons">
-                                <p><i>PHP</i></p>
-                            </div>
+                    </details>
+                    <details class="block block--experience" open>
+                        <summary>  <h3>E-commerce</h3> </summary>
+                        <div class="text text--experience">
+                            <p>Manage asynchronous API requests.</p>
+                            <p>Manage purchases.</p>
+                            <p>Use LocalStorage.</p>
+                            <p>Validate users data.</p>
                         </div>
-                    </div>
+                    </details>
                 </div>
             </aside>
 
             <aside class="skills">
-                <p>Interests.</p>
+                <p>Other Interests.</p>
                 <div class="container container--skills">
-                    <div class="block block--skills">
-                        <div class="items">
-                            <h4>VueJS</h4>
-                        </div>
-                        <div class="items">
-                            <h4>Nuxt</h4>
-                        </div>
-                        <div class="items">
-                            <h4>Vite</h4>
-                        </div>
-                    </div>
                     <div class="block block--skills">
                         <div class="items">
                             <h4>Angular</h4>
@@ -224,17 +191,6 @@
                         </div>
                         <div class="items">
                             <h4>Rust</h4>
-                        </div>
-                    </div>
-                    <div class="block block--skills">
-                        <div class="items">
-                            <h4>Tauri</h4>
-                        </div>
-                        <div class="items">
-                            <h4>Deno</h4>
-                        </div>
-                        <div class="items">
-                            <h4>Electron</h4>
                         </div>
                     </div>
                 </div>
@@ -262,9 +218,11 @@
                 </div>
             </aside>
             <div class="bumper">
-                <img class="up-layer" src="https://picsum.photos/id/6/500?grayscale&blur=2" alt="random image bottom">
-                <img class="btm-layer" src="https://picsum.photos/id/6/500" alt="random blurred image bottom ">
-                <div class="btn">
+                <img class="btm-layer" 
+                    src="https://picsum.photos/id/6/500" 
+                    alt="random blurred image bottom " 
+                    loading="lazy">
+                <div class="btn scroll">
                     <p>Thanks for your visit.</p>
                 </div>
             </div>
@@ -272,7 +230,7 @@
 
         <footer>
             <div class="container container--footer">
-                <p>Let's connect.</p>
+                <p>Let's connect !</p>
                 <div class="block block--footer">
                     <div class="text text--footer items">
                         <a href="mailto:tulinayoemmanuel@gmail.com">
