css & html corrections

--- a/index.html
+++ b/index.html
@@ -86,10 +86,43 @@
                 </div>
             </aside>
 
+            <aside class="experience">
+                <p>My Awesome Projects.</p>
+                <div class="container container--experience">
+                    <details class="block block--experience" >
+                        <summary> <h3>React SPA</h3> </summary>
+                        <div class="text text--experience">
+                            <p>Configure navigation with "react-router-dom".</p>
+                            <p>Create user interface. </p>
+                            <p>Use functionnal components.</p>
+                            <p>Manage application states.</p>
+                        </div>
+                    </details>
+                    <details class="block block--experience" >
+                        <summary> <h3>MERN App</h3> </summary>
+                        <div class="text text--experience">
+                            <p>Implement CRUD operations.</p>
+                            <p>Add JWT authentication.</p>
+                            <p>Encrypt users passwords.</p>
+                            <p>Manage file uploads and file deletions.</p>
+                        </div>
+                    </details>
+                    <details class="block block--experience" >
+                        <summary>  <h3>JS App</h3> </summary>
+                        <div class="text text--experience">
+                            <p>Manage asynchronous API requests.</p>
+                            <p>Manage purchases.</p>
+                            <p>Use LocalStorage.</p>
+                            <p>Validate users data.</p>
+                        </div>
+                    </details>
+                </div>
+            </aside>
+
             <aside class="skills">
-                <p>My favourite tools.</p>
+                <p>Favourite tools.</p>
                 <div class="container container--skills">
-                    <h2>Frontend</h2>
+                    <!-- <h2>Frontend</h2> -->
                     <div class="block block--skills">
                         <div class="items">
                             <h4>React</h4>
@@ -135,40 +168,7 @@
                 </div>
             </aside>
 
-            <aside class="experience">
-                <p>Awesome Projects.</p>
-                <div class="container container--experience">
-                    <details class="block block--experience" open>
-                        <summary> <h3>React</h3> </summary>
-                        <div class="text text--experience">
-                            <p>Configure navigation with "react-router-dom".</p>
-                            <p>Create user interface. </p>
-                            <p>Use functionnal components.</p>
-                            <p>Manage application states.</p>
-                        </div>
-                    </details>
-                    <details class="block block--experience" open>
-                        <summary> <h3>Secure API.</h3> </summary>
-                        <div class="text text--experience">
-                            <p>Implement CRUD operations.</p>
-                            <p>Add JWT authentication.</p>
-                            <p>Encrypt users passwords.</p>
-                            <p>Manage file uploads and file deletions.</p>
-                        </div>
-                    </details>
-                    <details class="block block--experience" open>
-                        <summary>  <h3>E-commerce</h3> </summary>
-                        <div class="text text--experience">
-                            <p>Manage asynchronous API requests.</p>
-                            <p>Manage purchases.</p>
-                            <p>Use LocalStorage.</p>
-                            <p>Validate users data.</p>
-                        </div>
-                    </details>
-                </div>
-            </aside>
-
-            <aside class="skills">
+            <!-- <aside class="skills">
                 <p>Other Interests.</p>
                 <div class="container container--skills">
                     <div class="block block--skills">
@@ -194,27 +194,31 @@
                         </div>
                     </div>
                 </div>
-            </aside>
+            </aside> -->
             
             <aside class="education">
                 <p>Education.</p>
                 <div class="container container--education">
-                    <div class="block block--education">
-                        <h3>Simplon - Lille</h3>
-                        <div class="text text--education">
-                            <p>2021 - 2022</p>
-                            <p>— C# .NET Core —</p>
-                            <p>certified.</p>
-                        </div>
-                    </div>
+
                     <div class="block block--education">
                         <h3>OpenClassrooms</h3>
                         <div class="text text--education">
-                            <p>2022 - 2023</p>
                             <p>— Web Developper —</p>
+                            <p>2023 - 2024</p>
+                            <p>2022 - 2023</p>
                             <p>Bac+2 </p>
                         </div>
                     </div>
+
+                    <div class="block block--education">
+                        <h3>Simplon - Lille</h3>
+                        <div class="text text--education">
+                            <p>— C# .NET Core —</p>
+                            <p>2021 - 2022</p>
+                            <p>certified.</p>
+                        </div>
+                    </div>
+
                 </div>
             </aside>
             <div class="bumper">
