ajout de textes et correction grid

--- a/index.html
+++ b/index.html
@@ -77,39 +77,40 @@
                     </summary>
                     <div class="container container--experience">
                         <div class="block block--experience" >
-                            <div> <h3>Web design</h3> </div>
+                            <h3>Web design</h3> 
                             <div class="text text--experience">
-                                <p>Define specifications. </p>
-                                <p>Build the product backlog.</p>
-                                <p>Design user interfaces.</p>
-                                <p>Model api.</p>
+                                <p>I Defined the specifications,</p>
+                                <p>Built the product backlog,</p>
+                                <p>Designed the user interfaces,</p>
+                                <p>And modeled the api endpoints.</p>
                             </div>
                         </div>
                         <div class="block block--experience" >
-                            <div> <h3>React SPA</h3> </div>
+                            <h3>React SPA</h3>
                             <div class="text text--experience">
-                                <p>Configure navigation with "react-router-dom".</p>
-                                <p>Create user interface. </p>
-                                <p>Use functionnal components.</p>
-                                <p>Manage application states.</p>
+                                <p>I Configured the navigation with "react-router-dom",</p>
+                                <p>Implemented the user interface,</p>
+                                <p>And Managed application states,</p>
+                                <p>Using "redux-toolkit".</p>
                             </div>
                         </div>
                         <div class="block block--experience" >
-                            <div> <h3>MERN stack</h3> </div>
+                            <h3>MERN stack</h3>
                             <div class="text text--experience">
-                                <p>Implement CRUD operations.</p>
-                                <p>Add JWT authentication.</p>
-                                <p>Encrypt users passwords.</p>
-                                <p>Manage file uploads and file deletions.</p>
+                                <p>I Implemented CRUD operations,</p>
+                                <p>Using MongoDb Express And React,</p>
+                                <p>I Added JWT authentication,</p>
+                                <p>Encrypted the user's passwords,</p>
+                                <p>And Managed file uploads and deletions.</p>
                             </div>
                         </div>
                         <div class="block block--experience" >
-                            <div>  <h3>JS apps</h3> </div>
+                            <h3>JS apps</h3> 
                             <div class="text text--experience">
-                                <p>Manage asynchronous API requests.</p>
-                                <p>Manage purchases.</p>
-                                <p>Use LocalStorage.</p>
-                                <p>Validate users data.</p>
+                                <p>I Validated users data,</p>
+                                <p>Requested the REST API,</p>
+                                <p>And using LocalStorage,</p>
+                                <p>I Saved the user's purchases,</p>
                             </div>
                         </div>
                     </div>
