correction of links

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             </a>
                         </div>
                         <div class="block--skills items">
-                            <a href="https://github.com/manutuli/PetitsPlats2.0s">
+                            <a href="https://github.com/manutuli/PetitsPlats2.0">
                                 <p>JS</p>
                                 <div class="icons">
                                     <svg 
@@ -143,7 +143,6 @@
                         </div>
                     </div>
                 </details>
-                <!-- <div class="scroll__down"></div> -->
             </aside>
             
             <aside>
@@ -163,7 +162,6 @@
                             loading="lazy">
                     </div>
                 </details>
-                <!-- <div class="scroll__down"></div> -->
             </aside>    
         </main>
 
@@ -186,7 +184,7 @@
                         </a>
                     </div>
                     <div class="block--footer items">
-                        <a href="https://github.com/manutuli/OC_P7">
+                        <a href="https://github.com/manutuli?tab=repositories">
                             <P>github</P>
                             <div class="icons">
                                 <svg 
