--- a/index.html
+++ b/index.html
@@ -16,52 +16,62 @@
 
     <body>
         <header>
-            <div class="container">
-                <div class="block">
+            <div class="block">
+                <div class="block--header">
                     <h1>Web Developper</h1>
+                </div>
+                <div class="block--header text">
+                    <h3>Responsive Websites.</h3>
+                    <h3>Fullstack Web Applications.</h3>
+                </div>
+                <div class="block--header text">
+                    <h3>REST APIs.</h3>
+                    <h3>JavaScript.</h3>
+                    <h3>React.</h3>
                 </div>
                 <div class="block--header">
                     <h2>Emmanuel Tulinayo</h2>
                 </div>
-                <div class="block">
-                    <div class="block--header items">
-                        <a href="mailto:tulinayoemmanuel@gmail.com">
-                            <p>email</p>
-                            <div class="icons">
-                                <svg 
-                                    viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                                    <path
-                                        d="M64 112c-8.8 0-16 7.2-16 16v22.1L220.5 291.7c20.7 17 50.4 17 71.1 0L464 150.1V128c0-8.8-7.2-16-16-16H64zM48 212.2V384c0 8.8 7.2 16 16 16H448c8.8 0 16-7.2 16-16V212.2L322 328.8c-38.4 31.5-93.7 31.5-132 0L48 212.2zM0 128C0 92.7 28.7 64 64 64H448c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V128z" />
-                                </svg>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="block--header items">
-                        <a href="https://github.com/manutuli?tab=repositories">
-                            <P>github</P>
-                            <div class="icons">
-                                <svg 
-                                    viewBox="0 0 496 512">
-                                    <path
-                                        d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z" />
-                                </svg>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="block--header items">
-                        <a href="https://fr.linkedin.com/in/emmanuel-tulinayo">
-                            <p>linkedin</p>
-                            <div class="icons">
-                                <svg  viewBox="0 0 448 512">
-                                    <!-- ! Font Awesome Pro 6.4.0 by
-                                    @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial
-                                    License) Copyright 2023 Fonticons, Inc. -->
-                                    <path
-                                        d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z" />
-                                </svg>
-                            </div>
-                        </a>
-                    </div>
+            </div>
+
+            <div class="block">
+                <div class="block--header items">
+                    <a href="mailto:tulinayoemmanuel@gmail.com">
+                        <p>email</p>
+                        <div class="icons">
+                            <svg 
+                                viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                                <path
+                                    d="M64 112c-8.8 0-16 7.2-16 16v22.1L220.5 291.7c20.7 17 50.4 17 71.1 0L464 150.1V128c0-8.8-7.2-16-16-16H64zM48 212.2V384c0 8.8 7.2 16 16 16H448c8.8 0 16-7.2 16-16V212.2L322 328.8c-38.4 31.5-93.7 31.5-132 0L48 212.2zM0 128C0 92.7 28.7 64 64 64H448c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V128z" />
+                            </svg>
+                        </div>
+                    </a>
+                </div>
+                <div class="block--header items">
+                    <a href="https://github.com/manutuli?tab=repositories">
+                        <P>github</P>
+                        <div class="icons">
+                            <svg 
+                                viewBox="0 0 496 512">
+                                <path
+                                    d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z" />
+                            </svg>
+                        </div>
+                    </a>
+                </div>
+                <div class="block--header items">
+                    <a href="https://fr.linkedin.com/in/emmanuel-tulinayo">
+                        <p>linkedin</p>
+                        <div class="icons">
+                            <svg  viewBox="0 0 448 512">
+                                <!-- ! Font Awesome Pro 6.4.0 by
+                                @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial
+                                License) Copyright 2023 Fonticons, Inc. -->
+                                <path
+                                    d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z" />
+                            </svg>
+                        </div>
+                    </a>
                 </div>
             </div>
         </header>
@@ -73,40 +83,40 @@
                         <h3>My Awesome Projects.</h3>
                     </summary>
                     <div class="container container--experience">
-                        <div class="block block--experience" >
+                        <div class="block--experience" >
                             <h3>Web design</h3> 
                             <div class="text text--experience">
-                                <p>I Defined the specifications,</p>
-                                <p>Built the product backlog,</p>
-                                <p>Designed the user interfaces,</p>
-                                <p>And modeled the api endpoints.</p>
+                                <p>I implemented the specifications,</p>
+                                <p>built the product backlog,</p>
+                                <p>designed the user interfaces,</p>
+                                <p>and modeled the api endpoints.</p>
                             </div>
                         </div>
-                        <div class="block block--experience" >
+                        <div class="block--experience" >
                             <h3>React SPA</h3>
                             <div class="text text--experience">
-                                <p>I Configured the navigation with "react-router-dom",</p>
-                                <p>Implemented the user interface,</p>
-                                <p>And Managed application states,</p>
-                                <p>Using "redux-toolkit".</p>
+                                <p>I configured the navigation with "react-router-dom",</p>
+                                <p>implemented the user interface,</p>
+                                <p>and managed application states,</p>
+                                <p>using "redux-toolkit".</p>
                             </div>
                         </div>
-                        <div class="block block--experience" >
+                        <div class="block--experience" >
                             <h3>MERN stack</h3>
                             <div class="text text--experience">
-                                <p>I Implemented CRUD operations,</p>
-                                <p>Using MongoDb Express And React,</p>
-                                <p>I Added JWT authentication,</p>
-                                <p>And I Encrypted the user's passwords.</p>
+                                <p>I implemented CRUD operations,</p>
+                                <p>using MongoDb Express And React,</p>
+                                <p>I added JWT authentication,</p>
+                                <p>and I encrypted the user's passwords.</p>
                             </div>
                         </div>
-                        <div class="block block--experience" >
-                            <h3>JS apps</h3> 
+                        <div class="block--experience" >
+                            <h3>JS Apps</h3> 
                             <div class="text text--experience">
-                                <p>I Validated users data,</p>
-                                <p>Requested the REST API,</p>
-                                <p>And using LocalStorage,</p>
-                                <p>I Saved the user's purchases,</p>
+                                <p>I validated users data,</p>
+                                <p>requested the REST API,</p>
+                                <p>and using LocalStorage,</p>
+                                <p>I saved the user's purchases.</p>
                             </div>
                         </div>
                     </div>
@@ -139,7 +149,8 @@
                     <summary>
                         <h3>Let's connect </h3>
                     </summary>
-                    <div class="container">
+                    <div class="contact">
+                    <div class="container--contact">
                         <h4>Contact Me</h4>
                         <div class="block">
                             <div class="block--contact items">
@@ -169,6 +180,8 @@
                                 </a>
                             </div>
                         </div>
+                    </div>
+                    <div class="container--contact">
                         <h4>My Github Repositories</h4>
                         <div class="block">
                             <div class="block--skills items">
@@ -202,7 +215,7 @@
                                 <a href="https://github.com/manutuli/OC_P3">
                                     <p>SASS</p>
                                     <div class="icons">
-
+                                        <p>css</p>
                                     </div>
                                 </a>
                             </div>
@@ -218,10 +231,10 @@
                                     </div>
                                 </a>
                             </div>
-
                         </div>
-
+                    </div>               
                     </div>
+  
                 </details>
             </aside>
         </main>
