--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
                 <div class="block--header">
                     <h1>Web Developper</h1>
                 </div>
+                <!-- <div class="block--header text">
+                </div> -->
                 <div class="block--header text">
-                    <h3>Responsive Websites.</h3>
-                    <h3>Fullstack Web Applications.</h3>
-                </div>
-                <div class="block--header text">
-                    <h3>REST APIs.</h3>
+                    <h3>Responsive.</h3>
+                    <h3>Fullstack.</h3>
+                    <h3>Applications.</h3>
                     <h3>JavaScript.</h3>
                     <h3>React.</h3>
+                    <h3>REST APIs.</h3>
                 </div>
                 <div class="block--header">
                     <h2>Emmanuel Tulinayo</h2>
@@ -35,18 +36,6 @@
             </div>
 
             <div class="block">
-                <div class="block--header items">
-                    <a href="mailto:tulinayoemmanuel@gmail.com">
-                        <p>email</p>
-                        <div class="icons">
-                            <svg 
-                                viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                                <path
-                                    d="M64 112c-8.8 0-16 7.2-16 16v22.1L220.5 291.7c20.7 17 50.4 17 71.1 0L464 150.1V128c0-8.8-7.2-16-16-16H64zM48 212.2V384c0 8.8 7.2 16 16 16H448c8.8 0 16-7.2 16-16V212.2L322 328.8c-38.4 31.5-93.7 31.5-132 0L48 212.2zM0 128C0 92.7 28.7 64 64 64H448c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V128z" />
-                            </svg>
-                        </div>
-                    </a>
-                </div>
                 <div class="block--header items">
                     <a href="https://github.com/manutuli?tab=repositories">
                         <P>github</P>
