color scheme lightmode

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
                     <h2>Emmanuel Tulinayo</h2>
                 </div>
                 <div class="block--header">
-                    <h1>Web Developper</h1>
+                    <div >
+                        <h1>
+                            Web Developper
+                        </h1>
+                    </div>
                 </div>
                 <div class="block--header tags">
                     <h3>Responsive.</h3>
@@ -35,7 +39,7 @@
 
             <div class="block">
                 <div class="block--header items">
-                    <a href="https://github.com/manutuli?tab=repositories">
+                    <a target="_blank" href="https://github.com/manutuli?tab=repositories">
                         <P>github</P>
                         <div class="icons">
                             <svg 
@@ -47,7 +51,7 @@
                     </a>
                 </div>
                 <div class="block--header items">
-                    <a href="https://fr.linkedin.com/in/emmanuel-tulinayo">
+                    <a target="_blank" href="https://fr.linkedin.com/in/emmanuel-tulinayo">
                         <p>linkedin</p>
                         <div class="icons">
                             <svg  viewBox="0 0 448 512">
@@ -140,7 +144,7 @@
                         <h4>Contact Me</h4>
                         <div class="block">
                             <div class="block--contact items">
-                                <a href="mailto:tulinayoemmanuel@gmail.com">
+                                <a target="_blank" href="mailto:tulinayoemmanuel@gmail.com">
                                     <p>email</p>
                                     <div class="icons">
                                         <svg 
@@ -152,7 +156,7 @@
                                 </a>
                             </div>
                             <div class="block--contact items">
-                                <a href="https://fr.linkedin.com/in/emmanuel-tulinayo">
+                                <a target="_blank" href="https://fr.linkedin.com/in/emmanuel-tulinayo">
                                     <p>linkedin</p>
                                     <div class="icons">
                                         <svg  viewBox="0 0 448 512">
@@ -183,7 +187,7 @@
                                 </a>
                             </div>
                             <div class="block--skills items">
-                                <a href="https://github.com/manutuli/OC_P7/tree/main/kasa">
+                                <a target="_blank" href="https://github.com/manutuli/OC_P7/tree/main/kasa">
                                     <p>JS</p>
                                     <div class="icons">
                                         <svg 
@@ -197,7 +201,7 @@
                         </div>
                         <div class="block">
                             <div class="block--skills items">
-                                <a href="https://github.com/manutuli/OC_P3">
+                                <a target="_blank" href="https://github.com/manutuli/OC_P3">
                                     <p>SASS</p>
                                     <div class="icons">
                                         <p>css</p>
@@ -205,7 +209,7 @@
                                 </a>
                             </div>
                             <div class="block--skills items">
-                                <a href="https://github.com/manutuli/sportsee">
+                                <a target="_blank" href="https://github.com/manutuli/sportsee">
                                     <p>React</p>
                                     <div class="icons">
                                         <svg 
