fixes and changes : urls and css

--- a/index.html
+++ b/index.html
@@ -18,14 +18,10 @@
         <header>
             <div class="block">
                 <div class="block--header">
-                    <h2>Emmanuel Tulinayo</h2>
+                    <h1>Web Developper</h1>
                 </div>
                 <div class="block--header">
-                    <div >
-                        <h1>
-                            Web Developper
-                        </h1>
-                    </div>
+                    <h2>Emmanuel Tulinayo</h2>
                 </div>
                 <div class="block--header tags">
                     <h3>Responsive.</h3>
@@ -77,37 +73,37 @@
                         <div class="block--experience" >
                             <h3>Web design</h3> 
                             <div class="text text--experience">
-                                <p>I implemented the specifications,</p>
-                                <p>built the product backlog,</p>
-                                <p>designed the user interfaces,</p>
-                                <p>and modeled the api endpoints.</p>
+                                <p>I implement the specifications,</p>
+                                <p>build the product backlog,</p>
+                                <p>design the user interfaces,</p>
+                                <p>and model the api endpoints.</p>
                             </div>
                         </div>
                         <div class="block--experience" >
                             <h3>React SPA</h3>
                             <div class="text text--experience">
-                                <p>I configured the navigation with "react-router-dom",</p>
-                                <p>implemented the user interface,</p>
-                                <p>and managed application states,</p>
+                                <p>I configure the navigation with "react-router-dom",</p>
+                                <p>implement the user interface,</p>
+                                <p>and manage application states,</p>
                                 <p>using "redux-toolkit".</p>
                             </div>
                         </div>
                         <div class="block--experience" >
                             <h3>MERN stack</h3>
                             <div class="text text--experience">
-                                <p>I implemented CRUD operations,</p>
+                                <p>I implement CRUD operations,</p>
                                 <p>using MongoDb Express And React,</p>
-                                <p>I added JWT authentication,</p>
-                                <p>and I encrypted the user's passwords.</p>
+                                <p>I add JWT authentication,</p>
+                                <p>and I encrypt the user's passwords.</p>
                             </div>
                         </div>
                         <div class="block--experience" >
                             <h3>JS Apps</h3> 
                             <div class="text text--experience">
-                                <p>I validated users data,</p>
-                                <p>requested the REST API,</p>
-                                <p>and using LocalStorage,</p>
-                                <p>I saved the user's purchases.</p>
+                                <p>I validate users data,</p>
+                                <p>write the requests to REST APIs,</p>
+                                <p>and use LocalStorage,</p>
+                                <p>to save the user's purchases.</p>
                             </div>
                         </div>
                     </div>
@@ -175,7 +171,7 @@
                         <h4>My Github Repositories</h4>
                         <div class="block">
                             <div class="block--skills items">
-                                <a href="https://github.com/manutuli/ArgentBank_front">
+                                <a target="_blank" href="https://github.com/manutuli/ArgentBank_front">
                                     <p>React</p>
                                     <div class="icons">
                                         <svg 
@@ -187,7 +183,7 @@
                                 </a>
                             </div>
                             <div class="block--skills items">
-                                <a target="_blank" href="https://github.com/manutuli/OC_P7/tree/main/kasa">
+                                <a target="_blank" href="https://github.com/manutuli/thought-cabinet">
                                     <p>JS</p>
                                     <div class="icons">
                                         <svg 
@@ -201,10 +197,18 @@
                         </div>
                         <div class="block">
                             <div class="block--skills items">
-                                <a target="_blank" href="https://github.com/manutuli/OC_P3">
+                                <a target="_blank" target="_blank" target="_blank" href="https://github.com/manutuli/OC_P3">
                                     <p>SASS</p>
                                     <div class="icons">
-                                        <p>css</p>
+                                        <!-- <p>css</p> -->
+                                        <svg 
+                                            fill="#000000" width="225px" height="225px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                            <g id="SVGRepo_iconCarrier">
+                                                <path d="M4.192 3.143h15.615l-1.42 16.034-6.404 1.812-6.369-1.813L4.192 3.143zM16.9 6.424l-9.8-.002.158 1.949 7.529.002-.189 2.02H9.66l.179 1.913h4.597l-.272 2.62-2.164.598-2.197-.603-.141-1.569h-1.94l.216 2.867L12 17.484l3.995-1.137.905-9.923z">
+
+                                                </path>
+                                            </g>
+                                        </svg>
                                     </div>
                                 </a>
                             </div>
