css & html layout corrections

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         
         <main>
             <aside>
-                <details open class="block">
+                <details open >
                     <summary>
                         <h3>My Awesome Projects.</h3>
                     </summary>
@@ -111,7 +111,7 @@
             </aside>
             
             <aside>
-                <details open class="block wiki" >
+                <details open class="wiki" >
                     <summary>
                         <h3>Here's a random <strong>Wikipedia</strong> page about...</h3>
                     </summary>
@@ -131,7 +131,7 @@
             </aside>
 
             <aside>
-                <details open class="block">
+                <details open >
                     <summary>
                         <h3>Let's connect </h3>
                     </summary>
