--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
                     <h2>Emmanuel Tulinayo</h2>
                 </div>
                 <div class="block--header tags">
-                    <h3>Responsive.</h3>
-                    <h3>Fullstack.</h3>
-                    <h3>Applications.</h3>
-                    <h3>JavaScript.</h3>
-                    <h3>React.</h3>
-                    <h3>REST APIs.</h3>
+                    <h3>Responsive</h3>
+                    <h3>Fullstack</h3>
+                    <h3>Applications</h3>
+                    <h3>JavaScript</h3>
+                    <h3>React</h3>
+                    <h3> 
+                        <abbr title="Representational State Transfer">REST</abbr> 
+                        <abbr title="Application Programming Interface"> API</abbr> 
+                    </h3>
                 </div>
             </div>
 
@@ -80,7 +83,7 @@
                             </div>
                         </div>
                         <div class="block--experience" >
-                            <h3>React SPA</h3>
+                            <h3>React <abbr title="Single Page Application">SPA</abbr></h3>
                             <div class="text text--experience">
                                 <p>I configure the navigation with "react-router-dom",</p>
                                 <p>implement the user interface,</p>
@@ -89,11 +92,11 @@
                             </div>
                         </div>
                         <div class="block--experience" >
-                            <h3>MERN stack</h3>
+                            <h3><abbr title="Mongoose, Express, React, NodeJS">MERN</abbr> stack</h3>
                             <div class="text text--experience">
-                                <p>I implement CRUD operations,</p>
+                                <p>I implement <abbr title="Create, Read, Update, Delete">CRUD</abbr> operations,</p>
                                 <p>using MongoDb Express And React,</p>
-                                <p>I add JWT authentication,</p>
+                                <p>I add <abbr title="JSON Web Token">JWT</abbr> authentication,</p>
                                 <p>and I encrypt the user's passwords.</p>
                             </div>
                         </div>
