html trailling slashes and double target attribute

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="fr">
 
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <meta name="description" content="I am a frontend oriented, fullstack Web developper."/>
-        <meta name="keywords" content="web,developper,devellopeur,fullstack,frontend,webdesign"/>
-        <link rel="stylesheet" href="./css/normalize.css" />
-        <link rel="stylesheet" href="./css/index.css" />
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="I am a frontend oriented, fullstack Web developper.">
+        <meta name="keywords" content="web,developper,devellopeur,fullstack,frontend,webdesign">
+        <link rel="stylesheet" href="./css/normalize.css">
+        <link rel="stylesheet" href="./css/index.css">
         <script defer src="./js/wiki.js"></script>
         <script defer src="./js/observer.js"></script>
         <!-- <script defer src="./js/scroll.js"></script> -->
@@ -119,7 +119,7 @@
                         <h3>Here's a random <strong>Wikipedia</strong> page about...</h3>
                     </summary>
                     <div class="container">
-                        <h4 class="wikiTitle"></h4>
+                        <h4 class="wikiTitle">No title found</h4>
                         <div class="scroll">
                             <div class="text" id="wikiquote"></div>
                         </div>
@@ -200,7 +200,7 @@
                         </div>
                         <div class="block">
                             <div class="block--skills items">
-                                <a target="_blank" target="_blank" target="_blank" href="https://github.com/manutuli/OC_P3">
+                                <a target="_blank" href="https://github.com/manutuli/OC_P3">
                                     <p>SASS</p>
                                     <div class="icons">
                                         <!-- <p>css</p> -->
