--- a/index.html
+++ b/index.html
@@ -23,17 +23,31 @@
                 <div class="block--header">
                     <h2>Emmanuel Tulinayo</h2>
                 </div>
-                <div class="block--header tags">
-                    <h3>Responsive</h3>
-                    <h3>Fullstack</h3>
-                    <h3>Applications</h3>
-                    <h3>JavaScript</h3>
-                    <h3>React</h3>
-                    <h3> 
+                <ul class="block--header tags">
+                    <li>JavaScript</li>
+                    <li>Responsive websites</li>
+                    <li>JSDoc</li>
+                    <li>Jest</li>
+                    <li>Testing-library</li>
+                    <li>Lighthouse SEO</li>
+                    <li>Accessibility</li>
+                    <li>Fullstack Applications</li>
+                    <li>MERN Stack</li>
+                    <li>React</li>
+                    <li>Redux-toolkit</li>
+                    <li>Prop-types</li>
+                    <li>NodeJS</li>
+                    <li>Express</li>
+                    <li> 
                         <abbr title="Representational State Transfer">REST</abbr> 
-                        <abbr title="Application Programming Interface"> API</abbr> 
-                    </h3>
-                </div>
+                        <!-- <abbr title="Application Programming Interface"> APIs</abbr>  -->
+                    </li>
+                    <li>MongoDB</li>
+                    <!-- <li>NoSQL</li> -->
+                    <li>MySQL</li>
+                    <li>PHP</li>
+                    <li>Linux Terminal</li>
+                </ul>
             </div>
 
             <div class="block">
@@ -95,7 +109,7 @@
                             <h3><abbr title="Mongoose, Express, React, NodeJS">MERN</abbr> stack</h3>
                             <div class="text text--experience">
                                 <p>I implement <abbr title="Create, Read, Update, Delete">CRUD</abbr> operations,</p>
-                                <p>using MongoDb Express And React,</p>
+                                <p>using MongoDB Express And React,</p>
                                 <p>I add <abbr title="JSON Web Token">JWT</abbr> authentication,</p>
                                 <p>and I encrypt the user's passwords.</p>
                             </div>
