--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="content-type" content="text/html" >
+        <!-- <meta http-equiv="content-security-policy" content=""> -->
+        <meta name="referrer" content="origin" >
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="I am a frontend oriented, fullstack Web developper.">
-        <meta name="keywords" content="web,developper,devellopeur,fullstack,frontend,webdesign">
+        <meta name="keywords" content="devellopeur javascript, fullstack, frontend, React, lille">
+        <meta name="author" content="emmanuel tulinayo" >
         <link rel="stylesheet" href="./css/normalize.css">
         <link rel="stylesheet" href="./css/index.css">
         <script defer src="./js/wiki.js"></script>
@@ -25,28 +29,30 @@
                 </div>
                 <ul class="block--header tags">
                     <li>JavaScript</li>
-                    <li>Responsive websites</li>
+                    <!-- <li>Responsive websites</li> -->
                     <li>JSDoc</li>
                     <li>Jest</li>
                     <li>Testing-library</li>
                     <li>Lighthouse SEO</li>
                     <li>Accessibility</li>
-                    <li>Fullstack Applications</li>
+                    <!-- <li>Fullstack Applications</li> -->
                     <li>MERN Stack</li>
                     <li>React</li>
-                    <li>Redux-toolkit</li>
-                    <li>Prop-types</li>
+                    <li>redux-toolkit</li>
+                    <li>prop-types</li>
+                    <li>JWT</li>
                     <li>NodeJS</li>
                     <li>Express</li>
                     <li> 
                         <abbr title="Representational State Transfer">REST</abbr> 
                         <!-- <abbr title="Application Programming Interface"> APIs</abbr>  -->
                     </li>
+                    <li>Swagger</li>
                     <li>MongoDB</li>
-                    <!-- <li>NoSQL</li> -->
+                    <li>PostgreSQL</li>
                     <li>MySQL</li>
                     <li>PHP</li>
-                    <li>Linux Terminal</li>
+                    <!-- <li>Linux Terminal</li> -->
                 </ul>
             </div>
 
@@ -251,9 +257,9 @@
 
         <footer>
             <div class="block block--footer">
-                <div class="text">
+                <address class="text">
                     <p>Emmanuel Tulinayo - 2024</p>
-                </div>
+                </address>
             </div>
         </footer>
     </body>
