markup meta et debug wiki

--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="content-type" content="text/html" >
-        <!-- <meta http-equiv="content-security-policy" content=""> -->
-        <meta name="referrer" content="origin" >
+        <meta http-equiv="content-security-policy" content="upgrade-insecure-requests">
+        <!-- <meta http-equiv="content-security-policy" content="default-src https://en.wikipedia.org"> -->
+        <meta name="referrer" content="strict-origin-when-cross-origin" >
+        <meta name="color-scheme" content="dark light" >
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="I am a frontend oriented, fullstack Web developper.">
         <meta name="keywords" content="devellopeur javascript, fullstack, frontend, React, lille">
         <meta name="author" content="emmanuel tulinayo" >
-        <link rel="stylesheet" href="./css/normalize.css">
-        <link rel="stylesheet" href="./css/index.css">
+        <link rel="stylesheet" href="./css/normalize.css" >
+        <link rel="stylesheet" href="./css/index.css" >
+        <link rel="icon" href="mask/mask.png" type="image/png">
+
         <script defer src="./js/wiki.js"></script>
         <script defer src="./js/observer.js"></script>
         <!-- <script defer src="./js/scroll.js"></script> -->
@@ -144,10 +148,10 @@
                             <div class="text" id="wikiquote"></div>
                         </div>
                         <div class="block bumper">
-                            <img class="btm-layer" 
+                            <!-- <img class="btm-layer" 
                                 src="https://picsum.photos/id/20/500" 
-                                alt="random blurred image top"
-                                loading="lazy">
+                                alt="random blurred image"
+                                loading="lazy"> -->
                         </div>
                     </div>
                 </details>
