--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <meta name="author" content="emmanuel tulinayo" >
         <link rel="stylesheet" href="./css/normalize.css" >
         <link rel="stylesheet" href="./css/index.css" >
-        <link rel="icon" href="mask/mask.png" type="image/png">
-
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
         <script defer src="./js/wiki.js"></script>
         <script defer src="./js/observer.js"></script>
         <!-- <script defer src="./js/scroll.js"></script> -->
