fix ressources http mixtes

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                     <!-- <li>Fullstack Applications</li> -->
                     <li>MERN Stack</li>
                     <li>React</li>
+                    <li>React-dom</li>
+                    <li>React-router-dom</li>
                     <li>redux-toolkit</li>
                     <li>prop-types</li>
                     <li>JWT</li>
@@ -228,7 +230,7 @@
                                     <div class="icons">
                                         <!-- <p>css</p> -->
                                         <svg 
-                                            fill="#000000" width="225px" height="225px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                            fill="#000000" width="225px" height="225px" viewBox="0 0 24 24" xmlns="https://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
                                             <g id="SVGRepo_iconCarrier">
                                                 <path d="M4.192 3.143h15.615l-1.42 16.034-6.404 1.812-6.369-1.813L4.192 3.143zM16.9 6.424l-9.8-.002.158 1.949 7.529.002-.189 2.02H9.66l.179 1.913h4.597l-.272 2.62-2.164.598-2.197-.603-.141-1.569h-1.94l.216 2.867L12 17.484l3.995-1.137.905-9.923z">
 
