fix css darkmode toggle

--- a/index.html
+++ b/index.html
@@ -14,18 +14,28 @@
         <meta name="author" content="emmanuel tulinayo" >
         <link rel="stylesheet" href="./css/normalize.css" >
         <link rel="stylesheet" href="./css/index.css" >
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon_wave.ico" type="image/x-icon">
         <script defer src="./js/wiki.js"></script>
         <script defer src="./js/observer.js"></script>
-        <!-- <script defer src="./js/scroll.js"></script> -->
         <title> Emmanuel Tulinayo </title>
     </head>
 
     <body>
         <header>
+            <div class="block--darkmode">
+                <!-- <input type="radio" name="darkmode" id="dark">
+                <input type="radio" name="darkmode" id="light"> -->
+                
+                <label class="label--dark">
+                    <input type="radio" name="darkmode" id="dark">
+                </label>
+                <label class="label--light">
+                    <input type="radio" name="darkmode" id="light">
+                </label>
+            </div>
             <div class="block">
                 <div class="block--header">
-                    <h1 onmouseover="this.click()">Web Developper</h1>
+                    <h1>Web Developper</h1>
                 </div>
                 <div class="block--header">
                     <h2>Emmanuel Tulinayo</h2>
